Fix layout issues with autocomplete in meeting form.

--- a/app/stylesheets/_forms.scss
+++ b/app/stylesheets/_forms.scss
@@ -150,6 +150,11 @@
   top: 3px;
   position: relative;
   color: $lightness;
+
+  i {
+    position: relative;
+    top: 2px;
+  }
 }
 
 .field-group-input {
