--- a/app/stylesheets/forms/_meeting.scss
+++ b/app/stylesheets/forms/_meeting.scss
@@ -166,6 +166,7 @@
       }
 
       .autocomplete{
+        display: inline-block;
         margin-top: 10px;
         padding: 5px;
         ul{
@@ -187,6 +188,9 @@
     z-index: 9;
   }
 
+  .autocomplete {
+    display: inline-block;
+  }
 }
 
 .meeting-form-invite {
